force-app/main/default/objects/Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>A message stored for the log.</description>
    <inlineHelpText>A message stored for the log.</inlineHelpText>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>