force-app/main/default/objects/Log__c/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <description>The stack trace captured from an exception thrown within Apex.</description>
    <inlineHelpText>The stack trace captured from an exception thrown within Apex.</inlineHelpText>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>