force-app/main/default/objects/Log__c/fields/Transaction_Type_Short_Code__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type_Short_Code__c</fullName>
    <description>The short code value of a transaction type (sourced from Quiddity).</description>
    <inlineHelpText>The short code value of a transaction type (sourced from Quiddity).</inlineHelpText>
    <label>Transaction Type Short Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>